tests/errors/prints-printf-unrecognized-type.ja
procedure main()
  int x
  int y
  x += 42
  y += 1337

  // Should return type unrecognized (no type %q)
  printf("The answer to life, the universe and everything is %q %q", x, y)
